# jb

./: db.sqlite3  pyproject.toml
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_vaga_alter_usuario_email.py  0003_formação.py  0004_formação_datinic_for_formação_dattermi_for_and_more.py  0005_cidade.py  0006_profissional.py  0007_alter_profissional_cnpj.py  0008_alter_profissional_cnpj.py  0009_alter_profissional_cnpj.py  0010_inscrição.py  0011_rename_tempo_inscrição_descricao_and_more.py  0012_alter_profissional_linkedin_and_more.py  0013_usuario_cidade.py  0014_expreriencias.py  0015_expreriencias_data_inicio_expreriencias_data_termino_and_more.py  0016_alter_expreriencias_experiencias1.py  0017_rename_cnpj_profissional_cpf.py  0018_rename_cpf_profissional_cpf.py  0019_inscrição_vaga.py
jb/: asgi.py  settings.py  urls.py  wsgi.py
