[tool.poetry]
name = "jb"
version = "0.1.0"
description = ""
authors = ["camila <mila.e.ferreira28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
